feat - cart - Add API endpoint to checkout cart by public uuid
